--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 
                 <img src="./ProfessionalPortfolioSMU02.png" alt="Professional Portfolio" id="PortfolioImg">
                 
-                <button class="PoBtn" id="Portfolio"><a href="https://github.com/JohanBotes/jb-SMU02-ProfessionalPortfolio" target="_blank" class="larger">Professional Portfolio <br><span class="smaller">Advanced CSS</span></a></button>
+                <button class="PoBtn" id="Portfolio"><a href="https://johanbotes.github.io/jb-SMU02-ProfessionalPortfolio/" target="_blank" class="larger">Professional Portfolio <br><span class="smaller">Advanced CSS</span></a></button>
 
                 Professional Portfolio website front-end. An effective portfolio highlights your strongest work as well as the thought processes behind it. The core skills demonstrated are Modal design, Display Grid, Flexbox, Media Queries, and Advanced CSS variables.<br><a href="https://github.com/JohanBotes/jb-SMU02-ProfessionalPortfolio" target="_blank">JohanBotes - SMU02 GitHub Repository</a>
             </div>
