--- a/index.html
+++ b/index.html
@@ -162,11 +162,17 @@
             <div class="grid-col-span-1" id="contactMe-div">Contact<br>Me <br><a href="#TN-aboutMe" class="BTTT">Back to the top</a>
             </div>
 
-            <div class="detailsContainer">
+            <div class="detailsFlexContainer grid-col-span-2">
            
-                <div class="grid-col-span-1" id="f1">Cellphone: +1 (217) 518-2138 <br>eMail: johan.botes@udexx.com</div>
+                <div class="flex-item-1" id="f1"><span class="footerBold">Cellphone:</span><br> +1 (217) 518-2138</div>
+
+                <div class="flex-item-2" id="f1"><span class="footerBold">E-mail:</span><br><a href="johan.botes@udexx.com" class="footerLinks">johan.botes@udexx.com</a></div>
                 
-                <div class="grid-col-span-1" id="f2">LinkedIn Profile: Johan Botes</a><br> Twitter: @JohanBotes </div>
+                <div class="flex-item-3" id="f1"><span class="footerBold">LinkedIn:</span><br><a href="https://www.linkedin.com/in/johan-botes-udexxceo" class="footerLinks">Johan Botes</a></div>
+
+                <div class="flex-item-3" id="f1"><span class="footerBold">Twitter:</span><br><a href="https://twitter.com/johan_botes" class="footerLinks">@johan_botes</a></div>
+
+                <div class="flex-item-3" id="f1"><span class="footerBold">GitHub:</span><br><a href="https://github.com/JohanBotes?tab=repositories" class="footerLinks">JohanBotes</a></div>
 
             </div>
 
