Commit 14 - Final JB Pic added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Two "containers" - 1 x for the Home page link and 1 x for the rest of the TopNav menu items - to be able show the home page link left and the rest flex-right -->
         <div class="homelogo" id="home">
           <a href="https://www.linkedin.com/in/johan-botes-udexxceo" class="homenav" target="_blank">Johan Botes</a>
+          <img src="./JBotes 2 Panel Drift Pic - Copy.JPG" class="JBPic">
         </div>
 
         <div class="topnav" id="myTopnav">
